--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ dist-ssr
 *.svgz
 *.webp
 *.zip
+src/utils/extract-images/computer-organization-and-design-the-hardware-software-interface.pdf
+src/utils/extract-images/hladik-linearni-algebra-nejen-pro-informatiky.pdf
