--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "mockjs": "^1.1.0",
     "vite": "^4.4.5",
-    "vite-plugin-mock": "^3.0.0"
+    "vite-plugin-mock": "^2.9.8"
   }
 }
