--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@uppy/core": "^3.3.1",
+    "@uppy/dashboard": "^3.5.0",
+    "@uppy/drag-drop": "^3.0.2",
+    "@uppy/file-input": "^3.0.2",
+    "@uppy/image-editor": "^2.1.2",
+    "@uppy/progress-bar": "^3.0.2",
+    "@uppy/react": "^3.1.3",
     "pako": "^2.1.0",
     "pdf-img-convert": "^1.2.1",
     "pdf-lib": "^1.17.1",
