Add OARepoUpload plugin

--- a/src/utils/uppy-plugins/oarepo-upload/package.json
+++ b/src/utils/uppy-plugins/oarepo-upload/package.json
@@ -2,5 +2,9 @@
     "name": "oarepo-upload",
     "version": "1.0.0",
     "main": "index.js",
-    "type": "module"
+    "type": "module",
+    "types": "index.d.ts",
+    "dependencies": {
+        "nanoid": "^4.0.0"
+    }
 }
