Add sample images; start OARepoFileSource

--- a/.gitignore
+++ b/.gitignore
@@ -23,16 +23,15 @@ dist-ssr
 *.sln
 *.sw?
 
-*.png
-*.jpg
-*.jpeg
-*.gif
-*.tif
-*.tiff
-*.bmp
-# *.svg
-*.svgz
-*.webp
-*.zip
-src/utils/extract-images/computer-organization-and-design-the-hardware-software-interface.pdf
-src/utils/extract-images/hladik-linearni-algebra-nejen-pro-informatiky.pdf
+# *.png
+# *.jpg
+# *.jpeg
+# *.gif
+# *.tif
+# *.tiff
+# *.bmp
+# # *.svg
+# *.svgz
+# *.webp
+# *.zip
+/src/utils/extract-images/images
