--- a/package.json
+++ b/package.json
@@ -17,17 +17,19 @@
     "@uppy/image-editor": "^2.1.2",
     "@uppy/progress-bar": "^3.0.2",
     "@uppy/react": "^3.1.3",
+    "@uppy/unsplash": "^3.2.2",
     "pako": "^2.1.0",
     "pdf-lib": "^1.17.1",
     "pngjs": "^7.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@preact/preset-vite": "^2.5.0",
+    "@types/react": "^16.14.45",
+    "@types/react-dom": "^16.9.19",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
