Add fileTypeFilter opt; refactor

--- a/src/utils/uppy-plugins/oarepo-file-source/package.json
+++ b/src/utils/uppy-plugins/oarepo-file-source/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "type": "module",
+    "types": "index.d.ts",
     "dependencies": {
         "@uppy/provider-views": "workspace:^",
         "@uppy/utils": "workspace:^",
