--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "image-previewer",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "File management component for Open Access Repository.",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,12 +13,10 @@
   "dependencies": {
     "@uppy/core": "^3.3.1",
     "@uppy/dashboard": "^3.5.0",
-    "@uppy/drag-drop": "^3.0.2",
     "@uppy/file-input": "^3.0.2",
     "@uppy/image-editor": "^2.1.2",
     "@uppy/progress-bar": "^3.0.2",
     "@uppy/react": "^3.1.3",
-    "@uppy/unsplash": "^3.2.2",
     "pako": "^2.1.0",
     "pdf-lib": "^1.17.1",
     "pngjs": "^7.0.0",
@@ -27,7 +26,6 @@
     "semantic-ui-react": "^2.1.4"
   },
   "devDependencies": {
-    "@preact/preset-vite": "^2.5.0",
     "@types/react": "^16.14.45",
     "@types/react-dom": "^16.9.19",
     "@vitejs/plugin-react": "^4.0.3",
