--- a/src/utils/uppy-plugins/oarepo-upload/package.json
+++ b/src/utils/uppy-plugins/oarepo-upload/package.json
@@ -1,10 +1,16 @@
 {
     "name": "oarepo-upload",
+    "description": "OArepo upload plugin for Uppy.",
     "version": "1.0.0",
     "main": "index.js",
     "type": "module",
     "types": "index.d.ts",
     "dependencies": {
-        "nanoid": "^4.0.0"
+        "nanoid": "^4.0.0",
+        "@uppy/provider-views": "workspace:^",
+        "@uppy/utils": "workspace:^"
+    },
+    "peerDependencies": {
+        "@uppy/core": "workspace:^"
     }
 }
