--- a/package.json
+++ b/package.json
@@ -51,9 +51,14 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-storybook": "^0.6.13",
     "mockjs": "^1.1.0",
+    "msw": "^1.2.5",
+    "msw-storybook-addon": "^1.8.0",
     "prop-types": "^15.8.1",
     "storybook": "^7.3.2",
     "vite": "^4.4.5",
     "vite-plugin-mock": "^2.9.8"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
