--- a/package.json
+++ b/package.json
@@ -36,28 +36,24 @@
     "pako": "^2.1.0",
     "pdf-lib": "^1.17.1",
     "pngjs": "^7.0.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "preact": "^10.5.13"
   },
   "devDependencies": {
+    "@preact/preset-vite": "^2.5.0",
     "@storybook/addon-essentials": "^7.3.2",
     "@storybook/addon-interactions": "^7.3.2",
     "@storybook/addon-links": "^7.3.2",
     "@storybook/addon-storysource": "^7.3.2",
     "@storybook/blocks": "^7.3.2",
+    "@storybook/builder-vite": "^7.3.2",
     "@storybook/jest": "^0.2.1",
-    "@storybook/react": "^7.3.2",
-    "@storybook/react-vite": "^7.3.2",
+    "@storybook/preact": "^7.3.2",
+    "@storybook/preact-vite": "^7.3.2",
     "@storybook/test-runner": "^0.13.0",
     "@storybook/testing-library": "^0.2.0",
-    "@types/react": "^16.14.45",
-    "@types/react-dom": "^16.9.19",
-    "@vitejs/plugin-react": "^4.0.3",
     "chromatic": "^6.23.0",
     "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-config-preact": "^1.3.0",
     "eslint-plugin-storybook": "^0.6.13",
     "mockjs": "^1.1.0",
     "msw": "^1.2.5",
@@ -67,6 +63,12 @@
     "vite": "^4.4.5",
     "vite-plugin-css-injected-by-js": "^3.3.0",
     "vite-plugin-mock": "^2.9.8"
+  },
+  "eslintConfig": {
+    "extends": "preact",
+    "plugins": [
+      "storybook/recommended"
+    ]
   },
   "msw": {
     "workerDirectory": "public"
