--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
       "require": "./dist/file-manager.umd.js"
     }
   },
+  "peerDependencies": {
+    "preact": "^10.5.13",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
+  },
   "dependencies": {
     "@uppy/core": "^3.3.1",
     "@uppy/dashboard": "^3.5.0",
@@ -35,10 +40,14 @@
     "@uppy/react": "^3.1.3",
     "pako": "^2.1.0",
     "pdf-lib": "^1.17.1",
-    "pngjs": "^7.0.0",
-    "preact": "^10.5.13"
+    "pngjs": "^7.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.20.7",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
     "@preact/preset-vite": "^2.5.0",
     "@storybook/addon-essentials": "^7.3.2",
     "@storybook/addon-interactions": "^7.3.2",
@@ -63,6 +72,7 @@
     "react-dom": "^16.14.0",
     "storybook": "^7.3.2",
     "vite": "^4.4.5",
+    "vite-plugin-babel": "^1.1.3",
     "vite-plugin-css-injected-by-js": "^3.3.0",
     "vite-plugin-mock": "^2.9.8"
   },
