--- a/package.json
+++ b/package.json
@@ -31,47 +31,43 @@
     "react-dom": "^16.14.0"
   },
   "dependencies": {
-    "@uppy/core": "^3.3.1",
-    "@uppy/dashboard": "^3.5.0",
+    "@uppy/core": "^3.7.1",
+    "@uppy/dashboard": "^3.7.1",
     "@uppy/drag-drop": "^3.0.3",
-    "@uppy/file-input": "^3.0.2",
-    "@uppy/image-editor": "^2.1.2",
-    "@uppy/progress-bar": "^3.0.2",
-    "@uppy/react": "^3.1.3",
+    "@uppy/file-input": "^3.0.4",
+    "@uppy/image-editor": "^2.3.0",
+    "@uppy/locales": "^3.4.0",
+    "@uppy/progress-bar": "^3.0.4",
+    "@uppy/react": "^3.2.1",
     "pako": "^2.1.0",
     "pdf-lib": "^1.17.1",
     "pngjs": "^7.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.20.7",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-    "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.3",
-    "@babel/preset-env": "^7.23.3",
-    "@babel/preset-react": "^7.23.3",
-    "@preact/preset-vite": "^2.5.0",
-    "@storybook/addon-essentials": "^7.3.2",
-    "@storybook/addon-interactions": "^7.3.2",
-    "@storybook/addon-links": "^7.3.2",
-    "@storybook/addon-storysource": "^7.3.2",
-    "@storybook/blocks": "^7.3.2",
-    "@storybook/builder-vite": "^7.3.2",
-    "@storybook/jest": "^0.2.1",
-    "@storybook/preact": "^7.3.2",
-    "@storybook/preact-vite": "^7.3.2",
-    "@storybook/test-runner": "^0.13.0",
-    "@storybook/testing-library": "^0.2.0",
-    "chromatic": "^6.23.0",
-    "eslint": "^8.45.0",
+    "@preact/preset-vite": "^2.6.0",
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/addon-links": "^7.5.3",
+    "@storybook/addon-storysource": "^7.5.3",
+    "@storybook/blocks": "^7.5.3",
+    "@storybook/builder-vite": "^7.5.3",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/preact": "^7.5.3",
+    "@storybook/preact-vite": "^7.5.3",
+    "@storybook/test-runner": "^0.14.0",
+    "@storybook/testing-library": "^0.2.2",
+    "chromatic": "^9.0.0",
+    "eslint": "^8.53.0",
     "eslint-config-preact": "^1.3.0",
-    "eslint-plugin-storybook": "^0.6.13",
+    "eslint-plugin-storybook": "^0.6.15",
     "mockjs": "^1.1.0",
     "msw": "^1.2.5",
-    "msw-storybook-addon": "^1.8.0",
+    "msw-storybook-addon": "^1.10.0",
     "prop-types": "^15.8.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "storybook": "^7.3.2",
-    "vite": "^4.4.5",
+    "storybook": "^7.5.3",
+    "vite": "^4.5.0",
     "vite-plugin-babel": "^1.1.3",
     "vite-plugin-css-injected-by-js": "^3.3.0",
     "vite-plugin-mock": "^2.9.8"
