--- a/package.json
+++ b/package.json
@@ -44,29 +44,28 @@
     "pngjs": "^7.0.0"
   },
   "devDependencies": {
-    "@preact/preset-vite": "^2.6.0",
-    "@storybook/addon-essentials": "^7.5.3",
-    "@storybook/addon-interactions": "^7.5.3",
-    "@storybook/addon-links": "^7.5.3",
-    "@storybook/addon-storysource": "^7.5.3",
-    "@storybook/blocks": "^7.5.3",
-    "@storybook/builder-vite": "^7.5.3",
-    "@storybook/jest": "^0.2.3",
-    "@storybook/preact": "^7.5.3",
-    "@storybook/preact-vite": "^7.5.3",
-    "@storybook/test-runner": "^0.16.0",
-    "@storybook/testing-library": "^0.2.2",
-    "chromatic": "^9.0.0",
-    "eslint": "^8.53.0",
-    "eslint-config-preact": "^1.3.0",
-    "eslint-plugin-storybook": "^0.6.15",
+    "@chromatic-com/storybook": "^1.5.0",
+    "@preact/preset-vite": "^2.8.2",
+    "@storybook/addon-essentials": "^8.1.6",
+    "@storybook/addon-interactions": "^8.1.6",
+    "@storybook/addon-links": "^8.1.6",
+    "@storybook/addon-storysource": "^8.1.6",
+    "@storybook/blocks": "^8.1.6",
+    "@storybook/preact": "^8.1.6",
+    "@storybook/preact-vite": "^8.1.6",
+    "@storybook/test": "^8.1.6",
+    "@storybook/test-runner": "^0.18.2",
+    "chromatic": "^11.5.3",
+    "eslint": "^8.57.0",
+    "eslint-config-preact": "^1.4.0",
+    "eslint-plugin-storybook": "^0.8.0",
     "mockjs": "^1.1.0",
-    "msw": "^1.2.5",
-    "msw-storybook-addon": "^1.10.0",
+    "msw": "^2.3.1",
+    "msw-storybook-addon": "^2.0.2",
     "prop-types": "^15.8.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "storybook": "^7.5.3",
+    "storybook": "^8.1.6",
     "vite": "^4.5.3",
     "vite-plugin-babel": "^1.1.3",
     "vite-plugin-css-injected-by-js": "^3.3.0",
