--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "eslint": "^8.57.0",
     "eslint-config-preact": "^1.4.0",
     "eslint-plugin-storybook": "^0.8.0",
-    "mockjs": "^1.1.0",
     "msw": "^2.3.1",
     "msw-storybook-addon": "^2.0.2",
     "prop-types": "^15.8.1",
@@ -68,8 +67,7 @@
     "storybook": "^8.1.6",
     "vite": "^4.5.3",
     "vite-plugin-babel": "^1.1.3",
-    "vite-plugin-css-injected-by-js": "^3.3.0",
-    "vite-plugin-mock": "^2.9.8"
+    "vite-plugin-css-injected-by-js": "^3.3.0"
   },
   "eslintConfig": {
     "extends": "preact",
