--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     }
   },
   "peerDependencies": {
-    "preact": "^10.5.13",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   },
@@ -44,34 +43,36 @@
     "pngjs": "^7.0.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.5.0",
-    "@preact/preset-vite": "^2.8.2",
-    "@storybook/addon-essentials": "^8.1.6",
-    "@storybook/addon-interactions": "^8.1.6",
-    "@storybook/addon-links": "^8.1.6",
-    "@storybook/addon-storysource": "^8.1.6",
-    "@storybook/blocks": "^8.1.6",
-    "@storybook/preact": "^8.1.6",
-    "@storybook/preact-vite": "^8.1.6",
-    "@storybook/test": "^8.1.6",
-    "@storybook/test-runner": "^0.18.2",
+    "@chromatic-com/storybook": "^1.6.1",
+    "@storybook/addon-essentials": "^8.2.8",
+    "@storybook/addon-interactions": "^8.2.8",
+    "@storybook/addon-links": "^8.2.8",
+    "@storybook/addon-storysource": "^8.2.8",
+    "@storybook/blocks": "^8.2.8",
+    "@storybook/react-vite": "^8.2.8",
+    "@storybook/test": "^8.2.8",
+    "@storybook/test-runner": "^0.19.1",
+    "@vitejs/plugin-react": "^4.3.1",
     "chromatic": "^11.5.3",
     "eslint": "^8.57.0",
-    "eslint-config-preact": "^1.4.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-storybook": "^0.8.0",
     "msw": "^2.3.1",
-    "msw-storybook-addon": "^2.0.2",
+    "msw-storybook-addon": "^2.0.3",
     "prop-types": "^15.8.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "storybook": "^8.1.6",
+    "storybook": "^8.2.8",
     "vite": "^5.2.13",
     "vite-plugin-babel": "^1.2.0",
     "vite-plugin-css-injected-by-js": "^3.5.1"
   },
   "eslintConfig": {
-    "extends": "preact",
+    "extends": "react",
     "plugins": [
+      "eslint:recommended",
+      "react/recommended",
       "storybook/recommended"
     ]
   },
