--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@oarepo/file-manager",
   "private": false,
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "File management component for Open Access Repository.",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "watch": "vite build --watch",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
